lorem-ipsum-eks/infrastructure/local/istio/istio_auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: lorem-ipsum-auth
  namespace: dev
spec:
  jwtRules:
  - issuer: "lorem.ipsum.dev"
    jwksUri: "http://lorem-ipsum-auth.demo.svc.cluster.local/api/auth/.well-known/jwks.json"
    outputPayloadToHeader: User-Info
  selector:
    matchLabels:
      app: lorem-ipsum
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-level-az
  namespace: dev
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: lorem-ipsum
  rules:
  - when:
    - key: request.auth.claims[roles]
      values: [ "ROLE_ADMIN", "ROLE_USER", "ROLE_MODERATOR" ]
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: access-log
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingress
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
